# financeiro-pessoal

./: .gitignore  CHANGELOG.md  Desenvolvimento.ipynb  README.md  pyproject.toml
apps/: README.md
apps/api/: pyrightconfig.json
apps/api/app/: __init__.py  main.py  schemas.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.vue  styles.css
docs/architecture/: architecture_decisions.md  coding_guidelines.md  glossary.md  project_roadmap.md  release_candidate.md
examples/: financial_planner_example.py
src/: __init__.py  main.py
src/config/: __init__.py  constants.py  settings.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  __init__.py.full  account.py  advisor_report.py  advisor_report.py.bak  advisor_result.py  advisor_result.py.bak2  available_cash_analysis.py  capital_need_analysis.py  cash_exhaustion_analysis.py  cash_flow_cost.py  cash_flow_financing_cycle.py  cash_flow_metrics.py  cash_flow_projection.py  cash_flow_projection.py.bak2  cash_flow_recovery_plan.py  cash_flow_timeline.py  cash_flow_timeline.py.bak2  category.py  credit_dependency_analysis.py  credit_flow_dependency.py  expense_nature.py  expense_simulation_result.py  financial_advice.py  financial_decision.py  financial_goal.py  financial_health.py  (+44 more)
tests/: conftest.py
tests/integration/: test_financial_planner_pipeline.py
tools/: __init__.py  file_writer.py  find_corrupted_files.py  fix_entities_single_imports.py  fix_internal_imports.py  git.py  rebuild_init.py  version.py
(+117 files in other folders)
