
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financeiro-pessoal"
version = "0.1.0-alpha.9"
description = "Sistema de Gestão Financeira Pessoal"
requires-python = ">=3.12"
authors = [
    { name = "Daniel Cunha da Silva" }
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.5",
    "isort>=5.13",
    "mypy>=1.10"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

testpaths = [
    "tests"
]

python_files = [
    "test_*.py"
]

python_classes = [
    "Test*"
]

python_functions = [
    "test_*"
]

addopts = [
    "-ra",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html"
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]

select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
]

ignore = [
]

[tool.mypy]

python_version = "3.12"

strict = true

warn_unused_configs = true

warn_return_any = true

warn_unused_ignores = true

disallow_untyped_defs = true

disallow_any_generics = false

ignore_missing_imports = true
